--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,6 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
 # environment variables
 .env
 .env.production
@@ -23,3 +22,8 @@ pnpm-debug.log*
 # IDE
 .idea/
 .vscode/
+
+# prevent accidental commit of unsupported lockfiles
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
